--- a/TURBOsensei.ipynb
+++ b/TURBOsensei.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import new_forcsensei as fs\n",
+    "import turbosensei as fs\n",
     "f = fs.FileBrowser()\n",
     "f.widget()"
    ]
