--- a/TURBOsensei.ipynb
+++ b/TURBOsensei.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "# Welcome to FORCsensei\n",
+    "\n",
+    "The most recent version of *FORCsensei* has been built into this *Jupyter* notebook.\n",
+    "\n",
+    "If you have any issues with *FORCsensei* please send an email to FORCaist.user@gmail.com and we will provide support as soon as possible.\n",
+    "\n",
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Select a FORC data file\n",
+    "Your FORC data file must be preloaded onto the cloud (<a href=\"https://youtu.be/qJ7x1fgyDAI\" target=\"_blank\">tutorial video</a>). Click the ```Select``` button to select your data file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +29,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80f10cdd9a624eaf959497def53518ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileChooser(path='/Users/dave/Documents/Japan 2018/module tests/binder app', filename='', show_hidden='False')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "X = {'fc':fs.load.FORCfile()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Import your data file\n",
+    "Click the ```Import Data``` button to load your data into *FORCsensei*."
    ]
   },
   {
@@ -30,27 +73,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Select preprocessing options\n",
+    "Click the ```Preprocessing options``` button to open the *FORCsensei* data proprocessing menu."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "po = fs.buttons.LoadedButton(description=\"Preprocessing Options\", value=X)\n",
+    "po = fs.buttons.LoadedButton(description=\"Preprocessing options\", value=X)\n",
     "po.on_click(fs.buttons.ppo)\n",
     "display(po)\n",
     "X = po.value"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pe = fs.buttons.LoadedButton(description=\"Preprocess Data\", value=X)\n",
-    "pe.on_click(fs.buttons.ppe)\n",
-    "display(pe)\n",
-    "X = pe.value"
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Perform preprocessing\n",
+    "Click the ```Preprocess data``` button to perform the proprocessing options selected above."
    ]
   },
   {
@@ -59,10 +110,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ro = fs.buttons.LoadedButton(description=\"Model Options\", value=X)\n",
+    "pe = fs.buttons.LoadedButton(description=\"Preprocess data\", value=X)\n",
+    "pe.on_click(fs.buttons.ppe)\n",
+    "display(pe)\n",
+    "X = pe.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Model options\n",
+    "Click the ```Model options``` button to open the *FORCsensei* data processing menu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ro = fs.buttons.LoadedButton(description=\"Model options\", value=X)\n",
     "ro.on_click(fs.buttons.ro)\n",
     "display(ro)\n",
     "X = ro.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Compare models\n",
+    "Click the ```Compare models``` button to perform regression model selection."
    ]
   },
   {
@@ -78,6 +161,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Calculate final model\n",
+    "Click the ```Calculate final model``` button to build the final regression model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -90,6 +183,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Plot final model\n",
+    "Click the ```Plot final model``` button to open a interactive plot of the final FORC diagram."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -98,6 +201,16 @@
     "rf = fs.buttons.LoadedButton(description=\"Plot final model\", value=X)\n",
     "rf.on_click(fs.buttons.rf)\n",
     "display(rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Configure profiles\n",
+    "Click the ```Configure profiles``` button to open the menu for defining profile plot options."
    ]
   },
   {
@@ -113,15 +226,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rpp = fs.buttons.LoadedButton(description=\"plot profiles\", value=X)\n",
-    "rpp.on_click(fs.buttons.rpp)\n",
-    "display(rpp)\n",
-    "#X = fs.results.profile_plot(X)"
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
+    "\n",
+    "## Plot profiles\n",
+    "Click the ```Plot profiles``` button to plot the profile defined in the menu above."
    ]
   },
   {
@@ -129,7 +240,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rpp = fs.buttons.LoadedButton(description=\"Plot profiles\", value=X)\n",
+    "rpp.on_click(fs.buttons.rpp)\n",
+    "display(rpp)\n",
+    "#X = fs.results.profile_plot(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
   }
  ],
  "metadata": {
