updated binder app version

--- a/TURBOsensei.ipynb
+++ b/TURBOsensei.ipynb
@@ -1,26 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "# Welcome to FORCsensei\n",
-    "\n",
-    "The most recent version of *FORCsensei* has been built into this *Jupyter* notebook.\n",
-    "\n",
-    "If you have any issues with *FORCsensei* please send an email to FORCaist.user@gmail.com and we will provide support as soon as possible.\n",
-    "\n",
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Select a FORC data file\n",
-    "Your FORC data file must be preloaded onto the cloud (<a href=\"https://youtu.be/qJ7x1fgyDAI\" target=\"_blank\">tutorial video</a>). Click the ```Select``` button to select your data file."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,25 +10,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e415bb9a92664806b5801feb2cfe3ecb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileChooser(path='/Users/dave/Documents/Japan 2018/module tests/binder app', filename='', show_hidden='False')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://media1.tenor.com/images/05f63046d90165847bd99699ee3224be/tenor.gif?itemid=8171562\" height=\"150\" width=\"150\" border=\"1px\"></p>\n",
+    "    <p><H1>Welcome to <i>FORCsensei<i></H1></p>\n",
+    "</div>\n",
+    "<p><H3>Automated first-order reversal curve (FORC) processing<p></H3>\n",
+    "<p><i>FORCsensei is an open-source package provided by the Research Institute of Geology and Geoinformation, Geological Survey of Japan, National Institute of Advanced Industrial Science and Technology (AIST), Japan.<p>\n",
+    "<p><i> The FORCsensei package code can be found <a href=\"https://github.com/FORCaist/turbosensei\" target=\"_blank\">here</a><p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/217/217810.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Select a FORC data file</H3></p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X = {'fc':fs.load.FORCfile()}"
    ]
@@ -55,32 +52,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Import your data file\n",
-    "Click the ```Import Data``` button to load your data into *FORCsensei*."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/724/724831.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Import the FORC data</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0820043def47477ca52969a27e3c98cd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Import Data', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ini = fs.buttons.LoadedButton(description=\"Import Data\", value=X)\n",
     "ini.on_click(fs.buttons.ini)\n",
@@ -91,34 +80,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Select preprocessing options\n",
-    "Click the ```Preprocess options``` button to open the *FORCsensei* data proprocessing menu."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1024/1024828.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>  Select FORC Data Preprocessing Options</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55efc6637b074934a2184407e968ddc0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Preprocess options', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "po = fs.buttons.LoadedButton(description=\"Preprocess options\", value=X)\n",
+    "po = fs.buttons.LoadedButton(description=\"Preprocess Options\", value=X)\n",
     "po.on_click(fs.buttons.ppo)\n",
     "display(po)\n",
     "X = po.value"
@@ -128,34 +109,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Perform preprocessing in your data\n",
-    "Click the ```Preprocess data``` button to perform the proprocessing options selected above."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1286/1286736.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Perform FORC Data Preprocessing</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89c62770eb3a435fa63d2336380cccbe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Preprocess data', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pe = fs.buttons.LoadedButton(description=\"Preprocess data\", value=X)\n",
+    "pe = fs.buttons.LoadedButton(description=\"Preprocess Data\", value=X)\n",
     "pe.on_click(fs.buttons.ppe)\n",
     "display(pe)\n",
     "X = pe.value"
@@ -165,34 +138,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Define the ensemble of model options to compare\n",
-    "Click the ```Model options``` button to open the *FORCsensei* data processing menu."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1205/1205514.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Select FORC Regression Model Options</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcff7ff162744e0f845e8d0dd5f1e408",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Model options', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ro = fs.buttons.LoadedButton(description=\"Model options\", value=X)\n",
+    "ro = fs.buttons.LoadedButton(description=\"Model Options\", value=X)\n",
     "ro.on_click(fs.buttons.ro)\n",
     "display(ro)\n",
     "X = ro.value"
@@ -202,32 +167,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Perform model comparison\n",
-    "Click the ```Compare models``` button to perform regression model selection."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/897/897065.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Perform FORC Regression Model Comparison</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aba1fc0dca7f4e03970e0c9fcbb0b246",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Compare models', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rc = fs.buttons.LoadedButton(description=\"Compare models\", value=X)\n",
     "rc.on_click(fs.buttons.rc)\n",
@@ -239,32 +196,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Calculate your final model\n",
-    "Click the ```Calculate final model``` button to build the final regression model."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/897/897066.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Calculate The Final FORC Model</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ee6665e1879465eb098f5d16b364642",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Calculate final model', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "re = fs.buttons.LoadedButton(description=\"Calculate final model\", value=X)\n",
     "re.on_click(fs.buttons.re)\n",
@@ -276,32 +225,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Create an interactive plot of your final model\n",
-    "Click the ```Plot final model``` button to open a interactive plot of the final FORC diagram."
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1402/1402141.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Plot The Final FORC Model</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c690fbb99e84088881bd788b7de73d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Plot final model', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rf = fs.buttons.LoadedButton(description=\"Plot final model\", value=X)\n",
     "rf.on_click(fs.buttons.rf)\n",
@@ -312,74 +253,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Define profiles through your FORC for plotting\n",
-    "Click the ```Configure profiles``` button to open the menu for defining profile plot options."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59758d9b31c54fadb37fd50fedc63016",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Configure profiles', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "rpo = fs.buttons.LoadedButton(description=\"Configure profiles\", value=X)\n",
-    "rpo.on_click(fs.buttons.rpo)\n",
-    "display(rpo)\n",
-    "#X = fs.results.profile_options(X)"
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />\n",
-    "\n",
-    "## Plot your FORC profiles\n",
-    "Click the ```Plot profiles``` button to plot the profile defined in the menu above."
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/262/262543.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Configure FORC Profile Plots</H3></p>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e289bc771d1f4aa0b72475f7be487c8c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "LoadedButton(description='Plot profiles', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "rpo = fs.buttons.LoadedButton(description=\"Configure profiles\", value=X)\n",
+    "rpo.on_click(fs.buttons.rpo)\n",
+    "display(rpo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"height:3px;border:none;color:#333;background-color:#333;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"clear: left;\">\n",
+    "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1753/1753830.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
+    "    <p><H3>Plot The FORC Profile</H3></p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rpp = fs.buttons.LoadedButton(description=\"Plot profiles\", value=X)\n",
     "rpp.on_click(fs.buttons.rpp)\n",
-    "display(rpp)\n",
-    "#X = fs.results.profile_plot(X)"
+    "display(rpp)"
    ]
   },
   {
