--- a/TURBOsensei.ipynb
+++ b/TURBOsensei.ipynb
@@ -33,9 +33,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Follow 10 steps to FORC enlightenment\n",
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/217/217810.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Select a FORC data file</H3></p>\n",
+    "    <p><H3>(1) Select a FORC data file</H3></p>\n",
     "</div>"
    ]
   },
@@ -61,7 +62,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/724/724831.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Import the FORC data</H3></p>\n",
+    "    <p><H3>(2) Initialize FORCsensei</H3></p>\n",
     "</div>"
    ]
   },
@@ -71,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ini = fs.buttons.LoadedButton(description=\"Import Data\", value=X)\n",
+    "ini = fs.buttons.LoadedButton(description=\"Initialize\", value=X)\n",
     "ini.on_click(fs.buttons.ini)\n",
     "display(ini)"
    ]
@@ -89,7 +90,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1024/1024828.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>  Select FORC Data Preprocessing Options</H3></p>\n",
+    "    <p><H3>  (3) Select FORC Data Preprocessing Options</H3></p>\n",
     "</div>"
    ]
   },
@@ -118,7 +119,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1286/1286736.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Perform FORC Data Preprocessing</H3></p>\n",
+    "    <p><H3>(4) Perform FORC Data Preprocessing</H3></p>\n",
     "</div>"
    ]
   },
@@ -147,7 +148,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1205/1205514.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Select FORC Regression Model Options</H3></p>\n",
+    "    <p><H3>(5) Select FORC Regression Model Options</H3></p>\n",
     "</div>"
    ]
   },
@@ -176,7 +177,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/897/897065.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Perform FORC Regression Model Comparison</H3></p>\n",
+    "    <p><H3>(6) Perform FORC Regression Model Comparison</H3></p>\n",
     "</div>"
    ]
   },
@@ -205,7 +206,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/897/897066.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Calculate The Final FORC Model</H3></p>\n",
+    "    <p><H3>(7) Calculate The Final FORC Model</H3></p>\n",
     "</div>"
    ]
   },
@@ -234,7 +235,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1402/1402141.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Plot The Final FORC Model</H3></p>\n",
+    "    <p><H3>(8) Plot The Final FORC Model</H3></p>\n",
     "</div>"
    ]
   },
@@ -262,7 +263,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/262/262543.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Configure FORC Profile Plots</H3></p>\n",
+    "    <p><H3>(9) Configure FORC Profile Plots</H3></p>\n",
     "</div>"
    ]
   },
@@ -290,7 +291,7 @@
    "source": [
     "<div style=\"clear: left;\">\n",
     "    <p style=\"float: left;\"><img src=\"https://image.flaticon.com/icons/svg/1753/1753830.svg\" height=\"100\" width=\"100\" border=\"1px\"></p>\n",
-    "    <p><H3>Plot The FORC Profile</H3></p>\n",
+    "    <p><H3>(10) Plot The FORC Profile</H3></p>\n",
     "</div>"
    ]
   },
